--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^2.3",
+        "livewire/livewire": "1.3",
         "realrashid/sweet-alert": "^5.1",
         "spatie/laravel-permission": "^5.5"
     },
